# MultiAgentsHW

./: .gitignore
final-project/: .env.example  README.md  agent_metrics.py  config.py  ingest.py  kb_common.py  main.py  prompt_management.py  requirements.txt  retriever.py  supervisor.py  sync_langfuse_prompts.py  tools.py
homework-lesson-10/: .env.example  .gitignore  README.md  SCORE_COMMENT.md  conftest.py  deepeval-output-live.txt  requirements.txt
homework-lesson-12/: .env.example  README.md  config.py  conftest.py  deepeval-output.txt  kb_common.py  main.py  requirements.txt  retriever.py  schemas.py  supervisor.py  tools.py  tracing.py
homework-lesson-3/: .env.example  EXECUTION_PLAN.md  README.md  REALIZED.md  agent.py  config.py  main.py  requirements.txt  tools.py
homework-lesson-4/: .env.example  agent.py  config.py  main.py  requirements.txt  tools.py
homework-lesson-5/: .env.example  APP_WORKFLOW_UA.md  Makefile  PLAN_UA.md  README.md  STAGES.md  agent.py  config.py  ingest_langchain_flavour.py  ingest_llama_flavour.py  kb_common.py  knowledge_search_result.md  main.py  pyproject.toml  requirements.txt  retriever_langchain_flavour.py  retriever_llama_flavour.py  system_prompt.yaml  tools.py
homework-lesson-5/output/: research_report.md  research_report_example.md
homework-lesson-5/tests/: test_lesson_5.py
homework-lesson-8/: .env.example  .gitignore  config.py  ingest.py  main.py  requirements.txt  retriever.py  schemas.py  supervisor.py  tools.py
homework-lesson-9/: .env.example  acp_server.py  config.py  ingest.py  kb_common.py  main.py  (+7 more)
(+42 files in other folders)
